--- a/index.html
+++ b/index.html
@@ -13,7 +13,134 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__contenedor">
+            <div class="header__barra">
+                <div class="header__logo">
+                    <img src="img/logo.svg" alt="Logo Nucleus">
+                </div>
+
+                <nav class="navegacion">
+                    <a href="#" class="navegacion__link">¿Qué es?</a>
+                    <a href="#" class="navegacion__link">¿Como funciona?</a>
+                    <a href="#" class="navegacion__link">Precios</a>
+                    <a href="#" class="navegacion__link">Contratar</a>
+                </nav>
+            </div>
+            <div class="header__grid">
+                <div class="header__texto">
+                    <h1 class="header__heading">Recibe y realiza pagos en tu celular con nucleus</h1>
+                    <a class="header__boton" href="#">Obtener Cuenta</a>
+                </div>
+                <div class="header__grafico">
+                    <img src="img/app_1.svg" alt="imagen nucleus" class="header__imagen">
+                </div>
+            </div>
+        </div>
+    </header>
     
-    
+    <main class="nucleus">
+        <h2 class="nucleus__heading">¿Qué es?</h2>
+        <div class="nucleus__contenedor">
+            <div class="nucleus__grid">
+                <div class="nucleus__imagen">
+                    <img src="img/app_2.svg" alt="app nucleus">
+                </div>
+                <div class="listado">
+                    <div class="listado__elemento">
+                        <h2 class="listado__heading">Fácil</h2>
+                        <p class="listado__texto">Crea una cuenta, envía documentación y comienza a utilizar nucleus en un par de horas</p>
+                    </div>
+                    <div class="listado__elemento">
+                        <h2 class="listado__heading">Seguro</h2>
+                        <p class="listado__texto">Por su tecnología digital nucleus es imposible de hackear o robar</p>
+                    </div>
+                    <div class="listado__elemento">
+                        <h2 class="listado__heading">Administrable</h2>
+                        <p class="listado__texto">Añade o transfiere fondos a tu banco, añade limites o controla tus gastos.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <section class="seguridad">
+        <div class="seguridad__contenedor">
+             <h2 class="seguridad__heading">Nucleus es Seguro</h2>
+             <div class="seguridad__grid">
+                <div class="listado">
+                    <div class="listado__elemento">
+                        <p class="listado__texto">Nucleus es seguro e imposible de clonar</p>
+                    </div>
+                    <div class="listado__elemento">
+                        <p class="listado__texto">Utiliza tu cara o tu dedo para confirmar un deposito o registrar una cuenta</p>
+                    </div>
+                    <div class="listado__elemento">
+                        <p class="listado__texto">Paga en un establecimiento con una tarjeta de crédito que se desactiva una vez que haz hecho tu compra</p>
+                    </div>
+                </div>
+                <div class="seguridad__imagen">
+                    <img src="img/seguridad.png" alt="imagen seguridad nucleus">
+                </div>
+             </div>
+        </div>
+    </section>
+
+    <section class="comisiones">
+        <div class="comisiones__contenedor">
+            <h2 class="comisiones__heading">Comisiones</h2>
+            <div class="comisiones__grid">
+                <div class="comisiones__contenido">
+                    <p class="comisiones__texto">Mientras más veces utilices nucleus, menos pagas:</p>
+                    <div class="listado">
+                        <div class="listado__elemento listado__elemento--2columnas">
+                            <p class="listado__numero">3%</p>
+                            <p class="listado__texto">De todas tus transacciones si tus movimientos son menos a $999 USD.</p>
+                        </div>
+                        <div class="listado__elemento listado__elemento--2columnas">
+                            <p class="listado__numero">2,5%</p>
+                            <p class="listado__texto">De todas tus transacciones si tus movimientos son mayores a $999 USD.</p>
+                        </div>
+                    </div>
+                </div> <!--.comisiones__contenido-->
+                <div class="comisiones__imagen">
+                    <img src="img/app_3.svg" alt="imagen 3 app">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimoniales">
+        <div class="testimoniales__contenedor">
+            <h2 class="testimoniales__heading">Testimoniales</h2>
+
+            <div class="testimoniales__grid">
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app, muy sencillo de manejar y enviar diner</p>
+                    <p class="testimonial__autor">--SeBastián Gossos</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app, muy sencillo de manejar y enviar diner</p>
+                    <p class="testimonial__autor">--SeBastián Gossos</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app, muy sencillo de manejar y enviar diner</p>
+                    <p class="testimonial__autor">--SeBastián Gossos</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app, muy sencillo de manejar y enviar diner</p>
+                    <p class="testimonial__autor">--SeBastián Gossos</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app, muy sencillo de manejar y enviar diner</p>
+                    <p class="testimonial__autor">--SeBastián Gossos</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app, muy sencillo de manejar y enviar diner</p>
+                    <p class="testimonial__autor">--SeBastián Gossos</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
